# programacao_multithread_freertos

src/: CMakeLists.txt  main.c
src/tasks/: tarefa_botao.c  tarefa_joystick.c  tarefa_processamento.c  tasks.h
